@@ -62,6 +62,7 @@ Cacti CHANGELOG
 -bug: Correct alphabetic sorting to be more natural
 -bug: Meta Refresh Tags using improper syntax for the url
 -bug: The Graph Settings Page was using the graph refresh interval, which caused it to refresh while the user is inputting data
+-bug: Suggested data query index ordering with the "index_order" field is not always respected
 
 0.8.6h
 -bug#0000383: Add more verbose RRDtool debug output from Graph Management.
